# Ml_Learning_Projects-

./: .gitignore  setup_local.py
Amazon_review_project/: .gitignore  README.md  amazon_review_intelligence_prompt.md  pyproject.toml  requirements.txt  run_api_local.py  run_gradio_local.py  run_sample_prediction.py  run_ui_local.py
Amazon_review_project/configs/: default.yaml  quick.yaml
Amazon_review_project/src/amazon_review_intel/: __init__.py  config.py  logging_utils.py
Amazon_review_project/src/amazon_review_intel/data/: download.py  preprocess.py
Amazon_review_project/src/amazon_review_intel/evaluation/: metrics.py
Amazon_review_project/src/amazon_review_intel/features/: engineering.py
Amazon_review_project/src/amazon_review_intel/models/: baseline.py  mtl.py
Amazon_review_project/src/amazon_review_intel/serving/: api.py  pipeline.py  schemas.py
Amazon_review_project/src/amazon_review_intel/training/: train_baseline.py  train_mtl.py
Amazon_review_project/src/amazon_review_intel/ui/: gradio_app.py  streamlit_app.py
Amazon_review_project/src/amazon_review_intelligence.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
account_os/: docker-compose.yml
account_os/backend/: .gitignore  requirements.txt
account_os/backend/app/: main.py
account_os/backend/app/agents/: ar_automation.py  insights.py  orchestrator.py  payroll.py  reconciliation.py  tax.py  (+3 more)
account_os/backend/tests/: test_agents.py  test_ar.py  test_insights.py  test_learning_loop.py  test_reconciliation.py  test_rules.py
account_os/frontend/: package-lock.json  package.json
(+43 files in other folders)
