[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-review-intelligence"
version = "0.1.0"
description = "Production-style Amazon review intelligence system with baseline and multi-task NLP pipelines."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Amazon Review Intelligence" }]
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "pyarrow>=15.0.0",
  "scikit-learn>=1.5.0",
  "scipy>=1.13.0",
  "xgboost>=2.0.0",
  "datasets>=2.19.0",
  "transformers>=4.41.0",
  "streamlit>=1.30.0",
  "torch>=2.2.0",
  "accelerate>=0.30.0",
  "joblib>=1.4.0",
  "PyYAML>=6.0.1",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "gradio>=4.32.0",
  "onnx>=1.16.0",
  "onnxruntime>=1.18.0",
  "mlflow>=2.13.0",
  "seqeval>=1.2.2",
  "netcal>=1.3.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.4.0",
]

[project.scripts]
ari-download = "amazon_review_intel.data.download:main"
ari-preprocess = "amazon_review_intel.data.preprocess:main"
ari-train-baseline = "amazon_review_intel.training.train_baseline:main"
ari-train-mtl = "amazon_review_intel.training.train_mtl:main"
ari-serve = "amazon_review_intel.serving.api:run"
ari-gradio = "amazon_review_intel.ui.gradio_app:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

